# icon-rs

./: Cargo.toml  README.md  config-default.toml
src/: browse.rs  cli.rs  config.rs  enums.rs  files.rs  lib.rs  main.rs  parser.rs
