[package]
name = "icon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
simplelog = "0.12.2"
