[package]
name = "icon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
home = "0.5.9"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking"] }
resvg = "0.41.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
simplelog = "0.12.2"
viuer = "0.7.1"
